@@ -32,20 +32,21 @@ public final class ResourceUrl {
 	public static final String STATIC_RESOURCES_URL = "https://stamps.filezz.ru";
 	
 	// MUST be updated when any of our resources were modified
-	public static final String RESOURCES_VERSION = "v0.4.3.0";
+	public static final String RESOURCES_VERSION = "v0.4.3.1";
 
-	// CheckStyle: ignore LineLength for next 10 lines
-	private static final String CATALOG_UTILS_JS    = "/public/js/" + RESOURCES_VERSION + "/CatalogUtils.min.js";
-	private static final String COLLECTION_INFO_JS  = "/public/js/" + RESOURCES_VERSION + "/collection/info.min.js";
-	private static final String DATE_UTILS_JS       = "/public/js/" + RESOURCES_VERSION + "/DateUtils.min.js";
-	private static final String MAIN_CSS            = "/static/"    + RESOURCES_VERSION + "/styles/main.min.css";
-	private static final String PARTICIPANT_ADD_JS  = "/public/js/" + RESOURCES_VERSION + "/participant/add.min.js";
-	private static final String SERIES_ADD_JS       = "/public/js/" + RESOURCES_VERSION + "/series/add.min.js";
-	private static final String SERIES_INFO_JS      = "/public/js/" + RESOURCES_VERSION + "/series/info.min.js";
+	// CheckStyle: ignore LineLength for next 11 lines
+	private static final String CATALOG_UTILS_JS      = "/public/js/" + RESOURCES_VERSION + "/CatalogUtils.min.js";
+	private static final String COLLECTION_INFO_JS     = "/public/js/" + RESOURCES_VERSION + "/collection/info.min.js";
+	private static final String DATE_UTILS_JS          = "/public/js/" + RESOURCES_VERSION + "/DateUtils.min.js";
+	private static final String MAIN_CSS               = "/static/"    + RESOURCES_VERSION + "/styles/main.min.css";
+	private static final String PARTICIPANT_ADD_JS     = "/public/js/" + RESOURCES_VERSION + "/participant/add.min.js";
+	private static final String SERIES_ADD_JS          = "/public/js/" + RESOURCES_VERSION + "/series/add.min.js";
+	private static final String SERIES_INFO_JS         = "/public/js/" + RESOURCES_VERSION + "/series/info.min.js";
 	// @todo #1057 Use minified version of SeriesSaleImportForm.js
-	private static final String SALE_IMPORT_FORM_JS = "/public/js/" + RESOURCES_VERSION + "/components/SeriesSaleImportForm.js";
-	private static final String BOOTSTRAP_LANGUAGE  = "https://cdn.jsdelivr.net/gh/usrz/bootstrap-languages@3ac2a3d2b27ac43a471cd99e79d378a03b2c6b5f/languages.min.css";
-	private static final String FAVICON_ICO         = "/favicon.ico";
+	private static final String SALE_IMPORT_FORM_JS    = "/public/js/" + RESOURCES_VERSION + "/components/SeriesSaleImportForm.js";
+	private static final String SIMILAR_SERIES_FORM_JS = "/public/js/" + RESOURCES_VERSION + "/components/SimilarSeriesForm.js";
+	private static final String BOOTSTRAP_LANGUAGE     = "https://cdn.jsdelivr.net/gh/usrz/bootstrap-languages@3ac2a3d2b27ac43a471cd99e79d378a03b2c6b5f/languages.min.css";
+	private static final String FAVICON_ICO            = "/favicon.ico";
 
 	// see also pom.xml and MvcConfig.addResourceHandlers()
 	private static final String AXIOS_JS           = "0.19.2/dist/axios.min.js";
@@ -78,6 +79,7 @@ public final class ResourceUrl {
 		put(resources, host, "SERIES_ADD_JS", SERIES_ADD_JS);
 		put(resources, host, "SERIES_INFO_JS", SERIES_INFO_JS);
 		put(resources, host, "SALE_IMPORT_FORM_JS", SALE_IMPORT_FORM_JS);
+		put(resources, host, "SIMILAR_SERIES_FORM_JS", SIMILAR_SERIES_FORM_JS);
 	}
 	
 	// see also MvcConfig.addResourceHandlers()
