@@ -32,6 +32,7 @@ t_sg = Gibbons
 t_solovyov = Solovyov
 t_zagorski = Zagorski
 t_not_chosen = Not chosen
+t_server_error = Server error
 
 # header
 t_my_stamps = My stamps
@@ -163,6 +164,8 @@ t_sold_for = for
 t_not_chosen_masculine = Not chosen
 t_imported_from = Imported from
 t_similar_series = Similar series
+t_similar_series_id = Similar series ID
+t_mark_as_similar = Mark as similar
 t_could_not_import_info = Could not import information from this page
 
 # category/info.html
