@@ -32,6 +32,7 @@ t_sg = Gibbons
 t_solovyov = Соловьев
 t_zagorski = Загорский
 t_not_chosen = Не выбрана
+t_server_error = Ошибка сервера
 
 # шапка
 t_my_stamps = Мои марки
@@ -162,6 +163,8 @@ t_sold_for = за
 t_not_chosen_masculine = Не выбран
 t_imported_from = Импортировано с
 t_similar_series = Похожие серии
+t_similar_series_id = ID серии
+t_mark_as_similar = Отметить как похожую
 t_could_not_import_info = Не удалось импортировать информацию с этой страницы
 
 # category/info.html
