@@ -218,3 +218,14 @@ series.find_quantity_by_id = \
 SELECT quantity \
   FROM series \
  WHERE id = :series_id
+
+series.add_similar_series = \
+INSERT \
+  INTO similar_series \
+     ( series_id \
+     , similar_series_id \
+     ) \
+VALUES \
+     ( :series_id \
+     , :similar_series_id \
+     )
