@@ -1,4 +1,5 @@
 0.x (upcoming release)
+- (feature) a series can be marked as a similar to another one
 
 0.4.3
 - (feature)        add support for Ukrainian hryvnia
